gccida/c2/gen_type
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type/src/c-aux-info.c:805:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type/src/c-aux-info.c:808:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *chain; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type/src/c-aux-info.c:813:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type/src/c-aux-info.c:873:40: error: subscript of pointer to incomplete type 'struct rtx_def'
for ( i = concat( "", *( _QWORD *)( rtl[1].fld[0].rtwint + 32), 0LL); 
                                    ~~~^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type/src/config.h:7:8: note: forward declaration of 'struct rtx_def'
struct rtx_def;
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type/src/c-aux-info.c:875:41: error: subscript of pointer to incomplete type 'struct rtx_def'
i = concat( data_type, *( _QWORD *)( rtl[1].fld[0].rtwint + 32), 0LL) ) 
                                     ~~~^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type/src/config.h:7:8: note: forward declaration of 'struct rtx_def'
struct rtx_def;
       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type/src/c-aux-info.c:1000:20: error: expected expression
v24 = ( tree_node *)v21[4]; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type/src/c-aux-info.c:1000:9: error: use of undeclared identifier 'tree_node'
v24 = ( tree_node *)v21[4]; 
        ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type/src/c-aux-info.c:1002:26: error: expected expression
if ( v24 == ( tree_node *)*( &global_trees + 27) ) 
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type/src/c-aux-info.c:1002:15: error: use of undeclared identifier 'tree_node'
if ( v24 == ( tree_node *)*( &global_trees + 27) ) 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type/src/c-aux-info.c:1007:20: error: expected expression
v24 = ( tree_node *)v21[4]; 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type/src/c-aux-info.c:1007:9: error: use of undeclared identifier 'tree_node'
v24 = ( tree_node *)v21[4]; 
        ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/gen_type/src/obj/c-aux-info.o] Error 1
